--- a/Medicare_Analysis_MH.ipynb
+++ b/Medicare_Analysis_MH.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ea4bd6ec",
+   "metadata": {},
+   "source": [
+    "This Notebook is in response to the first question our group established when considering the Medicare Telehealth Trends Data: What effect did the onset of the 2020 pandemic have on the usage of telemedicine and if there was an effect, have trends been sustained?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b4f7de",
+   "metadata": {},
+   "source": [
+    "PART 1: IMPORTING AND CLEANING THE DATA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "87e0be16",
@@ -640,6 +656,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea24f561",
+   "metadata": {},
+   "source": [
+    "PART 2: VISUALIZING THE DATA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "b98542ea",
@@ -1117,6 +1141,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e26ed04c",
+   "metadata": {},
+   "source": [
+    "The number of telehealth users in the second quarter of 2020 increased by over 1 million users. As this was the same time the COVID-19 pandemic began, this suggests a correlation of demand for telehealth services with the onset of the pandemic. The number of telehealth users in the first quarter of 2020 is lower than the number of telehealth users in every quarter since."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "2ed4df99",
@@ -1267,12 +1299,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62689adb",
+   "cell_type": "markdown",
+   "id": "379c6f19",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The number of telehealth users and the number of telehealth-eligible users has decreased in the years since 2020."
+   ]
   }
  ],
  "metadata": {
